<package format="2">
  <name>graph-planner</name>
  <version>1.0.0</version>
  <description>
  This package converts a 2D or a slice of a 3D occupany grid or ESDF into a graph.  Also contains a centering controller.
  </description>
  <maintainer email="andmills17@gmail.com">Andrew Mills</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-sys</exec_depend>
  <exec_depend>python-scipy</exec_depend>
  <exec_depend>python-cv2</exec_depend>
  <exec_depend>python-thin_ext</exec_depend>
  <exec_depend>python-skimage</exec_depend>

  <build_depend>gbm_pkg</build_depend>
  <exec_depend>gbm_pkg</exec_depend>

  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>